--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,152 +9,29 @@
 <body>
 
 <!-- Start of Nav-bar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><%= image_tag("ASOG-PMS logo 1.png", :alt => "logo", :class => "logo") %></a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <% if staff_signed_in? %>
-          <ul class="nav navbar-nav navbar-right">
+  <%= render 'layouts/navbar' %>
 
-            <li>
-              <% @jobs = Job.where(staff_id: current_staff.id)  %>
-                    <% id = Array.new  %>
-                    <%  @jobs.each do |job| %>
-                    <%  project = job.project %>
-                    <% b = project.id %>
-                      <% id.push(b) %>
-                    <% end %>
-                    <% @projects = Array.new  %>
-                    <% id.each do |i|  %>
-                    <% project = Project.find(i)  %>
-                    <% @projects.push(project)  %>
-                    <% end %>
-                    <% updatescount = 0  %>
-                    <% @projects.each do |project|  %>
-                        <% updates = Update.where(project_id: project.id, read: false) %>
-                        <% updates.each do%>
-                          <% updatescount = updatescount + 1 %>
-                        <% end %>
-                    <% end %>
-              <div class="dropdown" id="user-menu">
-                <div class="dropdown-toggle nav-notif" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  Notifications
-                  <% if updatescount > 0  %>
-                    <span class="badge"> <%= updatescount %></span>
-                    <% end %>
+  <div class="container-fluid body">
+    <div class="row">
 
-                </div>
+      <!-- Start of Side-bar -->
+    <% if staff_signed_in? && current_staff.admin %>
+      <%= render 'layouts/sidebar' %>
 
-                  <ul class="dropdown-menu bullet pull-right scrollable-menu" aria-labelledby="dropdownMenu1">
-                    <li class="dropdown-item"> <strong><%= link_to "View all notifications", updates_path %></strong></li>
-                    <% if current_staff.admin == true %>
-                    <% updates = Update.last(20)  %>
-                    <% updates.reverse.each do |update| %>
-                      <li class="dropdown-item"> <%= link_to "#{update.content}",update_path(update.id) %> </li>
-                    <% end %>
-
-                    <% elsif current_staff.admin == false %>
-                    <% @projects.each do |project| %>
-                    <% @updates = Update.where(project_id: project.id).last(10) %>
-                        <% @updates.reverse.each do |update| %>
-                          <% if update.read = false %>
-                            <li class="dropdown-item"><strong><%= link_to "#{update.content}", update_path(update.id) %> </strong> </li>
-                          <% else %>
-                            <li class="dropdown-item"> <%= link_to "#{update.content}", update_path(update.id) %> </li>
-                          <% end %>
-
-                        <% end %>
-                    <% end %>
-                  <% end %>
-
-                  </ul>
-
-              </div>
-            </li>
-
-            <% if current_staff.admin == false  %>
-            <li>
-              <%= link_to "Home", root_url, class: "nav-home" %>
-            </li>
-            <% end %>
-
-            <li id="user-icon">
-              <div class="dropdown" id="user-menu">
-                <div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <%= image_tag("user icon.png", :alt => "user-icon", :class => "user-icon") %>
-                </div>
-
-                  <ul class="dropdown-menu bullet pull-right" aria-labelledby="dropdownMenu1">
-                    <li class="dropdown-item"><strong>Signed in as:</strong></li>
-                    <li class="dropdown-item"><%= current_staff.first_name %> <%= current_staff.last_name %> </li>
-                    <li class="dropdown-item"> View Profile </li>
-                    <li class="dropdown-item"> <%= link_to "Log Out", destroy_staff_session_path, method: :delete%></li>
-                  </ul>
-
-              </div></li>
-          </ul>
-          <% end %>
-        </div>
-      </div>
-    </nav>
-<!-- End of Nav-bar -->
-
-    <div class="container-fluid body">
-      <div class="row">
-
-<% if staff_signed_in? && current_staff.admin %>
-<!-- Start of Side-bar -->
-        <div class="col-sm-3 col-md-2 sidebar">
-
-          <ul class="nav nav-sidebar">
-            <!-- <li class="active"><a href="#">All Projects<span class="sr-only">(current)</span></a></li> -->
-            <li><%= link_to root_url do %>
-              <span class="glyphicon glyphicon-list-alt"></span> View all projects
-              <% end %>
-            </li>
-            <li><%= link_to new_project_path do %> <span class="glyphicon glyphicon-plus" ></span> Create new project   <% end %></li>
-          </ul>
-
-          <ul class="nav nav-sidebar">
-            <li><%= link_to pages_staffoptions_path do %> <span class="glyphicon glyphicon-user"></span> Manage staff  <% end %></li>
-            <li><%= link_to new_staff_registration_path do %>
-              <span class="glyphicon glyphicon-plus"></span> Add new staff account
-              <% end %>
-            </li>
-          </ul>
-
-          <!-- <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-          </ul> -->
-        </div>
-<!-- End of Side-bar -->
-
-<!-- Start of Main body -->
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        	<%= yield %>
-        </div>
+    <!-- Start of Main body -->
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      	<%= yield %>
       </div>
 
-<% else %>
-  <div class="col-sm-12  col-md-12  main">
-    <%= yield %>
-  </div>
-<% end %>
-
-
-<!-- End of Main body -->
     </div>
+    <% else %>
 
+      <div class="col-sm-12  col-md-12  main">
+        <%= yield %>
+      </div>
+
+    <% end %>
+    </div>
 
 </body>
 </html>
