--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
 <h1 class="form-head">Add Item to Financial Plan</h1>
-<h3 class="edit-from-project"><%= @project.project_title %></h3>
+<h3 class="edit-from-project"><%= @project %></h3>
 
 <%= render 'form' %>
