--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,7 @@
 
   <h1 class="form-head">Add Task to Work Plan</h1>
 
-  <h3 class="edit-from-project"><%= @project.project_title %></h3>
+  <h3 class="edit-from-project"><%= @project %></h3>
 
   <%= render 'form' %>
 
