--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
         <div class="row">
           <div class="col-md-12">
             <%= f.association :projects, :input_html => { :size => '3'}  %>
-            <%= f.input :contract_expiration_date, required: true %>
+            <%= f.input :contract_expiration_date, required: true, start_year: Date.today.year, end_year: Date.today.year + 10 %>
           </div
         </div>
       </div>
