--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="form-inputs">
       <%= f.input :task_title %>
       <%= f.input :description %>
-      <%= f.input :due_date %>
+      <%= f.input :due_date, start_year: Date.today.year, end_year: Date.today.year + 10 %>
       <%= f.hidden_field  :project_id, :value => params[:project_id] %>
     </div>
 <br>
