fixed stylings when overspend

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -43,3 +43,7 @@
 .progress-percentage-spent {
   background-color: #039be5  !important;
 }
+
+.overspending-progress {
+  background-color: #e53935 !important;
+}
