--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -6,6 +6,7 @@
 
       <div class="row">
         <div class="col-md-6">
+          <!-- <%= f.association :staffs, as: :check_boxes %> -->
           <%= f.association :kpa_cluster, include_blank: false, label_method: :kpa_title  %>
         </div>
         <div class="col-md-6">
