--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<input type="text" id="notice" name="notice" value="<%= notice %>" hidden>
 
 <h1>Listing Records</h1>
 
