--- a/app/views/tasks/_finishForm.html.erb
+++ b/app/views/tasks/_finishForm.html.erb
@@ -1,5 +1,5 @@
 <div class="main-wrapper">
-  <p id="notice"><%= notice %></p>
+  <input type="text" id="notice" name="notice" value="<%= notice %>" hidden>
 
   <h3><%= @project.project_title %></h3>
   <h4 class="project-heading">Task: <%= @task.task_title %></h4><br>
