--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -14,6 +14,11 @@
     margin-bottom: 25px;
 }
 
+.task-show-wrapper {
+  width: 80%;
+  margin: auto;
+}
+
 // NEW TASK STYLING
 
 .new-task-form {
@@ -60,16 +65,6 @@
   span {
     margin-left: 5px;
   }
-}
-
-.info-finished {
-  color: #4caf50;
-  font-weight: bold;
-}
-
-.info-remaining {
-  color: #039be5;
-  font-weight: bold;
 }
 
 
