--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -90,7 +90,7 @@
                   <td style="color: green;"> Complete </td>
                 <% else %>
                   <% if task.get_is_overdue %>
-                    <td style="color: #d9534f;"> Overdue * </td>
+                    <td style="color: #d9534f;"> Overdue(<%= (Date.today - task.due_date).to_i %> days) </td>
                   <% else %>
                     <td style="color: #d9534f;"> Incomplete </td>
                   <% end %>
@@ -161,7 +161,7 @@
                 <% end %>
               <% end %>
             </h4>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <%= task.due_date.strftime('%b' +" " +'%d' +", "+ '%Y') %></small></p>
+            <p><small class="text-muted" ><i class="glyphicon glyphicon-time"></i> <%= task.due_date.strftime('%b' +" " +'%d' +", "+ '%Y') %></small></p>
           </div>
           <div class="timeline-body">
             <p><%= task.description %></p>
